--- a/index.html
+++ b/index.html
@@ -134,4 +134,7 @@
     integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK" crossorigin="anonymous">
 </script>
 
+<script src="./script/Loggin.js"></script>
+
+
 </html>
