--- a/index.html
+++ b/index.html
@@ -124,7 +124,10 @@
 
 
     </main>
+    <div class="menuUsuario escondido">
 
+
+    </div>
 </body>
 
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"
