Agregue funcionalidad al boton de login y logout

--- a/index.html
+++ b/index.html
@@ -121,11 +121,13 @@
 
         </section>
 
-
-
     </main>
-    <div class="menuUsuario escondido">
-
+    <div class="menuUsuario escondido">    </div>
+    <div class="mod escondido">
+        <div class="modalContainer ">
+            <!-- agregar class escondido -->
+    
+        </div>
 
     </div>
 </body>
