Organice un poco mejor el SCSS, solucione bugs menores, agregue el DarkMode

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <li>Arte</li>
                     <li>Musica</li>
                     <li>Actividades</li>
-                    <li><i class="fa-solid fa-moon"></i></li>
+                    <li class ="btnDarkMode"><i class="fa-solid fa-moon " data-btn="darkMode"></i></li>
                 </ul>
             </nav>
             <div class="d-flex usuario col-2">
@@ -101,9 +101,9 @@
             </button>
         </div>
 
-        <section class="d-flex mt-3">
+        <section class="d-flex mt-3 ">
             <!-- <div class="fondo2 skew4"></div> -->
-            <div class="container-fluid w-50 fontAnton cositas">
+            <div class= "paraPirin w-50 fontAnton mt-3">
                 <h2>Sintomas de la gripe comun:</h2>
                 <p>Los sintomas de la gripe comun pueden variar de persona a persona, pero los sintomas mas comunes y cientificamente aceptasdos suelen ser:</p>
                 <ul>
@@ -114,6 +114,7 @@
                     <li>Probar comidas locas</li>
                 </ul>
             </div>
+            <div class=" fondoParaPirin"></div>
             <img src="./img/biohazzard.jpg" alt="" class="w-50 imgCositas">
         </section>
 
@@ -139,7 +140,7 @@
     integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK" crossorigin="anonymous">
 </script>
 
-<script src="./script/Loggin.js"></script>
+<script src="./script/Logeo-Logout-MenuUsuario-DarkMode.js"></script>
 
 
 </html>
